# image-annotate

./: .gitignore
.github/workflows/: build-macos.yml
desktop/src-tauri/: Cargo.toml  buildAC.ps1  build_both.ps1  build_one.ps1  build_run.sh  tauri.conf.json  vcenv.txt
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/permissions/: open-in-system.toml
desktop/src-tauri/scripts/: sign.ps1
desktop/src-tauri/src/: lib.rs  main.rs
harmony/: build-profile.json5  oh-package.json5
harmony/AppScope/: app.json5
harmony/AppScope/resources/base/element/: string.json
harmony/entry/: build-profile.json5  oh-package.json5
harmony/entry/src/main/: module.json5
harmony/entry/src/main/ets/entryability/: EntryAbility.ts
harmony/entry/src/main/ets/pages/: Index.ets
harmony/entry/src/main/resources/base/color/: color.json
harmony/entry/src/main/resources/base/element/: string.json
harmony/entry/src/main/resources/rawfile/: index.html
harmony/entry/src/main/resources/rawfile/css/: style.css
harmony/entry/src/main/resources/rawfile/js/: app.js  bridge.js  platform.js
web/: index.html
web/js/: app.js  bridge.js
