[package]
name = "image-annotate"
version = "0.9.0"
description = "图片标注 - 在图片上画标注并导出"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "image_annotate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# 默认给 Windows 关闭自定义标题栏等额外特性，保持精简
default = []
